Add dino.gif, logo2-wbackg.png, style.css, ynion_mabeamae/index.html, ynion_mabeamae/style.css

--- a/ynion_mabeamae/index.html
+++ b/ynion_mabeamae/index.html
@@ -82,5 +82,15 @@
         <img src="./images/babymonster.jpg" alt="Babymonster" />
       </div>
     </div>
+    <section class="my-goals">
+      <h2>My Goals</h2>
+      <ul>
+        <li>Become successful</li>
+        <li>Improve my skills</li>
+        <li>Get a job</li>
+        <li>To travel</li>
+        <li>Build my own house</li>
+      </ul>
+    </section>
   </body>
 </html>
