Add changes in the fiels.

--- a/ynion_mabeamae/index.html
+++ b/ynion_mabeamae/index.html
@@ -38,23 +38,19 @@
         </li>
         <li>
           <a href="./works/work_b.html" target="_blank"> 
-            Playground 
-          </a>
+            Playground </a>
         </li>
         <li>
           <a href="./works/work_c.html" target="_blank"> 
-            Boxed-In Games 
-          </a>
+            Boxed-In Games </a>
         </li>
         <li>
-          <a href="./works/work_d.html" target="_blank"> 
-            Portfolio 
-          </a>
+          <a href="./works/work_d.html" target="_blank">
+            Portfolio </a>
         </li>
         <li>
           <a href="./works/work_e.html" target="_blank"> 
-            Powershell GUI 
-          </a>
+            Powershell GUI </a>
         </li>
       </ol>
     </div>
