Add changes in this files.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           </a>
         </li>
         <li>
-          <!--TODO DELIMA-->
-          <a href=""></a>
+          <a href="./delima_justine/index.html" target="_blank">
+            Delima, Justine
+          </a>
         </li>
         <li>
           <a href="./relente_patriciajoy/index.html" target="_blank">
