--- a/ynion_mabeamae/index.html
+++ b/ynion_mabeamae/index.html
@@ -37,20 +37,16 @@
           </a>
         </li>
         <li>
-          <a href="./works/work_b.html" target="_blank"> 
-            Playground </a>
+          <a href="./works/work_b.html" target="_blank"> Playground </a>
         </li>
         <li>
-          <a href="./works/work_c.html" target="_blank"> 
-            Boxed-In Games </a>
+          <a href="./works/work_c.html" target="_blank"> Boxed-In Games </a>
         </li>
         <li>
-          <a href="./works/work_d.html" target="_blank">
-            Portfolio </a>
+          <a href="./works/work_d.html" target="_blank"> Portfolio </a>
         </li>
         <li>
-          <a href="./works/work_e.html" target="_blank"> 
-            Powershell GUI </a>
+          <a href="./works/work_e.html" target="_blank"> Powershell GUI </a>
         </li>
       </ol>
     </div>
@@ -60,8 +56,11 @@
         Your quick thinking and creativity makes the work in web developing much
         faster, you are a team player. -Matthew
       </p>
-      <!-- TODO Delima-->
-      <p></p>
+      <p>
+        Ma. Bea Mae Ynion is a hardworking student. I like her creativity and
+        ideas with projects. With this website, I hope to know better about her
+        and to collaborate with projects soon! - Justine
+      </p>
       <p>
         Your positive attitude during those late-night debugging sessions was a
         lifesaver! You kept the team motivated, and we got through it. - Pat
